[package]
name = "dndre"
version = "0.1.0"
authors = ["Rossi Lorenzo <snowycoder@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
nalgebra = "0.25"
fnv = "1.0"
bitflags = "1.0"
specs = { version = "0.16", default-features = false, features = ["specs-derive", "wasm-bindgen"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "BinaryType",
    "Blob",
    "Document",
    "Element",
    "ErrorEvent",
    "FileReader",
    "HtmlCanvasElement",
    "WebGlBuffer",
    "WebGlRenderingContext",
    "WebGlVertexArrayObject",
    "WebGlProgram",
    "WebGlShader",
    "WebGlUniformLocation",
    "OesVertexArrayObject",
    "PointerEvent",
    "KeyboardEvent",
    "Window",
]

[dev-dependencies]

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
